<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/buttonSettings"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="@dimen/text_size_2" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/SwitchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/SwitchTheme"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/text_size_2" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReturn"
            style="@style/ButtonStyle"
            android:gravity="center"
            android:text="@string/buttonReturn"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_weight="2" />


</LinearLayout>